<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="empty_name">Пустое название</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="m_s">m/s</string>
    <string name="pressure">Давление</string>
    <string name="hpa">hPa</string>
    <string name="enter_city_name">Enter city name:</string>
    <string name="city_name">city name</string>
</resources>